==> arneboe/stm32-midi-controller-hal/SW4STM32/test/Application/User/display/Adafruit_SSD1306.cpp <==
#include <display/Adafruit_SSD1306.h>
#include <stm32f1xx_hal_def.h>
#include <stm32f1xx_hal_i2c.h>
#include <sys/_stdint.h>
#include <cstring>
#include <hardwareSetup/Hardware.h>
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void Adafruit_SSD1306::ssd1306_command(uint8_t c) {
	// I2C
	const uint8_t control = 0x00;   // Co = 0, D/C = 0
	uint8_t data[] = {control, c};
	if(HAL_I2C_Master_Transmit(&i2c, (uint16_t)_i2caddr, data, 2, 10000)!= HAL_OK)
	  {
		/* Error_Handler() function is called when Timeout error occurs.
		   When Acknowledge failure occurs (Slave don't acknowledge its address)
		   Master restarts communication */
		switch(HAL_I2C_GetError(&i2c))
		{
		case HAL_I2C_ERROR_NONE:  //can never happen?
//			Error_Handler_msg(HAL_I2C_ERROR_NONE);
			break;
		case HAL_I2C_ERROR_BERR:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_BERR");
			break;
		case HAL_I2C_ERROR_ARLO:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_ARLO");
			break;
		case HAL_I2C_ERROR_AF:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_AF");
			break;
		case HAL_I2C_ERROR_OVR:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_OVR");
			break;
		case HAL_I2C_ERROR_DMA:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_DMA");
			break;
		case HAL_I2C_ERROR_TIMEOUT:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_TIMEOUT");
			break;
		default:
//			Error_Handler_msg(default);
			break;
		}
	  }


//	Wire.beginTransmission(_i2caddr);
//	Wire.write(control);
//	Wire.write(c);
//	Wire.endTransmission();

}

void Adafruit_SSD1306::display(void) {

  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(0);   // Column start address (0 = reset)
  ssd1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(0); // Page start address (0 = reset)
  #if SSD1306_LCDHEIGHT == 64
    ssd1306_command(7); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 32
    ssd1306_command(3); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 16
    ssd1306_command(1); // Page end address
  #endif

    // I2C
    //write display buffer bulk
    if(HAL_I2C_Master_Transmit(&i2c, (uint16_t)_i2caddr, dataBuffer, SSD1306_LCDHEIGHT * SSD1306_LCDWIDTH / 8 + 1, 10000) != HAL_OK)
    {
		switch(HAL_I2C_GetError(&i2c))
		{
		case HAL_I2C_ERROR_NONE://can never happen
			break;
		case HAL_I2C_ERROR_BERR:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_BERR");
			break;
		case HAL_I2C_ERROR_ARLO:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_ARLO");
			break;
		case HAL_I2C_ERROR_AF:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_AF");
			break;
		case HAL_I2C_ERROR_OVR:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_OVR");
			break;
		case HAL_I2C_ERROR_DMA:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_DMA");
			break;
		case HAL_I2C_ERROR_TIMEOUT:
			Hardware::ErroHandler(__FILE__, __LINE__, "HAL_I2C_ERROR_TIMEOUT");
			break;
		default:
			Hardware::ErroHandler(__FILE__, __LINE__, "DEFAULT_CASE");
			break;
		}
    }
}
